# test-drive

./: .codecov.yml  .gitignore  CMakeLists.txt  README.md  fpm.toml  meson.build  meson_options.txt  requirements.txt
.github/workflows/: build.yml  release.yml
config/: CMakeLists.txt  install-mod.py  meson.build  template-config.cmake  template-targets.cmake  template-version.cmake  test-env.yml
src/: CMakeLists.txt  JUnit.xml  JUnit.xsd  meson.build  testdrive.F90  testdrive.f90  testdrive_version.f90
test/: CMakeLists.txt  main.f90  main_junitxml.f90  meson.build  test_check.F90  test_check.f90  test_check_array.F90  test_select.F90  test_select.f90
test/export/: CMakeLists.txt  example.f90  meson.build
